[gd_scene load_steps=3 format=2]

[ext_resource path="res://SusMeter/SusMeter.gd" type="Script" id=1]
[ext_resource path="res://SusMeter/exxlamation_mark.png" type="Texture" id=2]

[node name="SusMeter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -540.0
margin_right = -960.0
margin_bottom = -540.0
script = ExtResource( 1 )

[node name="sus3" type="TextureRect" parent="."]
margin_left = 1750.0
margin_top = 30.0
margin_right = 1790.0
margin_bottom = 117.0
texture = ExtResource( 2 )

[node name="sus1" type="TextureRect" parent="."]
margin_left = 1850.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 117.0
texture = ExtResource( 2 )

[node name="sus2" type="TextureRect" parent="."]
margin_left = 1800.0
margin_top = 30.0
margin_right = 1840.0
margin_bottom = 117.0
texture = ExtResource( 2 )
